// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`coma in modificators 1`] = `
Object {
  "combinedComponents": Array [],
  "components": Object {
    "Layer": Object {
      "combinedComponents": Array [],
      "components": Object {},
      "mixins": Array [],
      "modificators": Object {
        "::after, ::before": Object {
          "combinedComponents": Array [],
          "components": Object {},
          "mixins": Array [],
          "modificators": Object {},
          "styles": Object {
            "color": "red",
          },
        },
      },
      "styles": Object {},
    },
  },
  "mixins": Array [],
  "modificators": Object {},
  "styles": Object {},
}
`;

exports[`coma in modificators 2`] = `
Object {
  ".Layer-{{ hash }}::after": Object {
    "color": "red",
  },
  ".Layer-{{ hash }}::before": Object {
    "color": "red",
  },
}
`;

exports[`complex 1`] = `
Object {
  "combinedComponents": Array [],
  "components": Object {
    "Button": Object {
      "combinedComponents": Array [],
      "components": Object {},
      "mixins": Array [],
      "modificators": Object {
        ":not([disabled]):hover": Object {
          "combinedComponents": Array [],
          "components": Object {},
          "mixins": Array [],
          "modificators": Object {},
          "styles": Object {
            "background-color": "transparent",
          },
        },
      },
      "styles": Object {},
    },
  },
  "mixins": Array [],
  "modificators": Object {},
  "styles": Object {},
}
`;

exports[`complex 2`] = `
Object {
  ".Button-{{ hash }}:not([disabled]):hover": Object {
    "background-color": "transparent",
  },
}
`;

exports[`complex selectors 1`] = `
Object {
  ".Bar-{{ hash }}": Object {
    "color": "green",
    "font-size": "10px",
  },
  ".Bar-{{ hash }} +.NextChild-{{ hash }}": Object {
    "color": "red'",
  },
  ".Bar-{{ hash }} .SucceessButton-{{ hash }},.Bar-{{ hash }} .PrimaryButton-{{ hash }},.Bar-{{ hash }} .WarningButton-{{ hash }}": Object {
    "padding": "10px",
  },
  ".Bar-{{ hash }} ~.NextFirst-{{ hash }}": Object {
    "padding": "20px",
  },
}
`;
